--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ This is a sample template for a news article in AMP. It demonstrates the usage o
     <!--
     Use `amp-carousel` for image galleries. Learn more about creating image galleries in AMP [here](/advanced/image_galleries_with_amp-carousel/).
     -->
-    <amp-carousel width="1280" height="970" layout="responsive" type="slides"> 
+    <amp-carousel width="1280" height="853" layout="responsive" type="slides"> 
       <figure>
-        <amp-img src="/img/lCloverfield_Stills-03.jpg" width=1280 height=853 layout=responsive></amp-img>
+        <amp-img src="/img/Cloverfield_Stills-03.jpg" width=1280 height=853 layout=responsive></amp-img>
       </figure>
       <figure>
         <amp-img src="/img/Cloverfield_Stills-09.jpg" width=1280 height=853 layout=responsive></amp-img>
@@ -144,9 +144,8 @@ This is a sample template for a news article in AMP. It demonstrates the usage o
     -->
     <figure>
       <amp-iframe src="https://openload.co/embed/-DGQD6qc1p0/Cloverfield.2008.1080p.BrRip.x264.YIFY.mp4"
-
                   height="360"
-                  layout="fixed-height"
+                  layout="responsive"
                   frameborder="0"
                   sandbox="allow-scripts allow-same-origin">
         <amp-img src="/img/loat-bom-tan-hollywood-hua-hen-khuynh-dao-phong-ve-2016-hinh-10.jpg"
