--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ This is a sample template for a news article in AMP. It demonstrates the usage o
                   frameborder="0"
                   sandbox="allow-scripts allow-same-origin">
         <amp-img src="/img/loat-bom-tan-hollywood-hua-hen-khuynh-dao-phong-ve-2016-hinh-10.jpg"
-                 layout="fixed-height"
+                 layout="responsive"
                  height="360"
                  width="auto"
                  placeholder>
