--- a/index.html
+++ b/index.html
@@ -144,14 +144,15 @@ This is a sample template for a news article in AMP. It demonstrates the usage o
     -->
     <figure>
       <amp-iframe src="https://openload.co/embed/-DGQD6qc1p0/Cloverfield.2008.1080p.BrRip.x264.YIFY.mp4"
-                  height="360"
+                  height="1280"
+				  width="853"
                   layout="responsive"
                   frameborder="0"
                   sandbox="allow-scripts allow-same-origin">
         <amp-img src="/img/loat-bom-tan-hollywood-hua-hen-khuynh-dao-phong-ve-2016-hinh-10.jpg"
                  layout="responsive"
-                 height="360"
-                 width="auto"
+                 height="1280"
+                 width="853"
                  placeholder>
         </amp-img>
       </amp-iframe>
